package check.core;

public interface CheckError {
}
